--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -35,7 +35,7 @@ const { title } = Astro.props;
 		font-family: system-ui, sans-serif;
 	}
   body {
-    background: #000;
+    background: #fff;
   }
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
