Updated docker config

--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -10,6 +10,7 @@ import Icon from 'astro-icon'
     <!--<div class="mx-auto max-w-[400px]">
       <a href='/register' class="flex items-center justify-center gap-3 text-xl register-btn"><Icon name='ri:quill-pen-fill' class="w-9 h-9 relative bottom-[2px]"/></a>
     </div>-->
+    Hello
   </main>
 </Layout>
 
