--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -14,6 +14,9 @@ const { title } = Astro.props;
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet"> 
 	</head>
 	<body>
 		<slot />
@@ -25,7 +28,6 @@ const { title } = Astro.props;
     border: 0;
     padding: 0;
     margin: 0;
-    color: #fff;
   }
 	:root {
 		--accent: 124, 58, 237;
@@ -35,7 +37,7 @@ const { title } = Astro.props;
 		font-family: system-ui, sans-serif;
 	}
   body {
-    background: #fff;
+    background: #000;
   }
 	code {
 		font-family: Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono,
