--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -1,20 +1,37 @@
 ---
-import Layout from '../layouts/Layout.astro';
-import { Picture } from '@astrojs/image/components';
-import Icon from 'astro-icon'
+import Layout from "../layouts/Layout.astro";
+import { Picture } from "@astrojs/image/components";
+import Icon from "astro-icon";
 ---
 
 <Layout title="Welcome to Cool Game 3">
-	<main>
-    <Picture class="mx-auto logo" src="/logo.png" widths={[200, 400, 800]} aspectRatio="16:9" sizes="(max-width: 800px) 100vw, 800px" alt="Cool Game 3 Logotype" />
-    <!--<div class="mx-auto max-w-[400px]">
-      <a href='/register' class="flex items-center justify-center gap-3 text-xl register-btn"><Icon name='ri:quill-pen-fill' class="w-9 h-9 relative bottom-[2px]"/></a>
-    </div>-->
-    Hello
+  <main>
+    <Picture
+      class="mx-auto logo"
+      src="/logo.png"
+      widths={[200, 400, 800]}
+      aspectRatio="16:9"
+      sizes="(max-width: 800px) 100vw, 800px"
+      alt="Cool Game 3 Logotype"
+    />
+
+    <div class="w-full">
+      <a
+        href="/register"
+        class="flex items-center justify-center gap-3 text-xl register-btn mx-auto"
+      >
+        <Icon name="raphael:power" class="w-14 h-14 relative bottom-[2px]" />
+        <svg id='sign-up-text' viewBox="0 0 210 80" xmlns="http://www.w3.org/2000/svg">
+          <text x="0" y="65">
+            Sign Up
+          </text>
+        </svg>
+      </a>
+    </div>
   </main>
 </Layout>
 
-<style>
+<style is:global>
   .logo {
     position: relative;
     animation: MoveUpDown 4s linear infinite;
@@ -22,26 +39,145 @@ import Icon from 'astro-icon'
   }
 
   .register-btn {
-    background: linear-gradient(180deg,#40c4f0 0%,#046fa5 100%);
-    width: 60px;
-    height: 60px;
-    padding: 6px;
-    text-shadow: 0px 0px 6px #0b4968;
+    position: relative;
+    color: #fff;
+    text-transform: uppercase;
     font-weight: bold;
-    border-radius: 10px;
-    box-shadow: inset 0px -4px 1px #024874;
+    width: 230px;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    padding: 10px 25px;
+    font-size: 64px;
+    letter-spacing: 0;
+    border-radius: 8px;
+    border: 1.25px solid white;
+    outline: 1.25px solid #1084ff;
+    text-shadow: 0px 0px 0px #0383ca;
+    background: linear-gradient(
+      to bottom,
+      #1084ff 0%,
+      #1084ff 10%,
+      #128eff 11%,
+      #128eff 20%,
+      #1494ff 21%,
+      #1494ff 30%,
+      #1699ff 31%,
+      #1699ff 40%,
+      #189cff 41%,
+      #189cff 50%,
+      #1aa4ff 51%,
+      #1aa4ff 60%,
+      #1caaff 61%,
+      #1caaff 70%,
+      #20b0ff 71%,
+      #24baff 80%,
+      #24baff 81%,
+      #27bfff 90%,
+      #2ac6ff 91%,
+      #2ac6ff 100%
+    );
+
+    transition: all .25s cubic-bezier(0.175, 0.885, 0.32, 1.275); 
+  }
+  .register-btn::before {
+    content: '';
+    position: absolute;
+    top: 2px;
+    left: 4px;
+    width: calc(100% - 8px);
+    border-radius: 8px;
+    background: rgba(255,255,255,0.25);
+    height: 8px;
+  }
+
+  .register-btn #sign-up-text text {
+    fill: transparent;
+    stroke: #fff;
+    stroke-width: 3px;
+    transition: all .25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  .register-btn svg{
+    transition: all .25s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+  }
+
+  .register-btn:hover {
+    filter: brightness(1.075);
+  }
+  .register-btn:hover svg:first-of-type {
+    transform: translateY(-2px);
+  }
+  .register-btn:hover svg {
+    filter: drop-shadow(0px 0px 8px #cbf1ff);
+  }
+  .register-btn:hover #sign-up-text text {
+    fill: #fff;
+    stroke: transparent;
+  }
+  /*
+  .register-btn {
+    filter: hue-rotate(40deg);
+    background: repeating-linear-gradient(
+      45deg,
+      #3ebbf7,
+      #3ebbf7 10px,
+      #45b1f4 10px,
+      #45b1f4 20px
+    );
+
+    font-size: 2em;
+    font-family: "Viga", sans-serif;
+    padding: 0.5em 1em;
+    cursor: pointer;
+    color: #333;
+    text-shadow: -1px 1px 0 rgba(255, 255, 255, 0.5);
+    border: 1px solid #dab10d;
+    border-bottom-color: rgb(218, 177, 13);
+    border-bottom-color: #d0a90d;
+    border-radius: 0.2em;
+    background: none;
+    position: relative;
+    width: 236px;
+    margin: 0 auto;
+  }
+  .register-btn::before {
+    border-radius: inherit;
+    background: linear-gradient(
+      to bottom,
+      #fbeeb8 0%,
+      #f9e8a0 10%,
+      #f2ca28 60%,
+      #f2ca28 90%,
+      #f9e8a0 100%
+    );
+  }
+  .register-btn::before,
+  .register-btn::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+  }
+
+  .register-btn::after {
+    content: "";
+    background: rgba(255, 255, 255, 0.2);
+    transition: opacity 0.2s;
+    opacity: 0;
+  }
+
+  .register-btn:hover::after {
+    opacity: 1;
   }
 
   .register-btn svg {
-    filter: drop-shadow(0px 0px 2px #045b93);
-  }
-
-  .register-btn svg path {
-    color: #dde9ee!important;
-  }
-
+    color: #333;
+  }*/
   @keyframes MoveUpDown {
-    0%, 100% {
+    0%,
+    100% {
       transform: translateY(0);
     }
     50% {
