Fixed font paths

--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -179,44 +179,16 @@ const { title } = Astro.props;
     fill: #fff;
     stroke: transparent;
   }
-
-  @font-face {
-    font-family: "Cubic Five";
-    src: url("/fonts/cubicfive10.woff2") format("woff2");
-    font-weight: 400;
-    font-style: normal;
-  }
-
-  @font-face {
-    font-family: "Cubic Five";
-    src: url("/fonts/cubicfive11.woff2") format("woff2");
-    font-weight: 500;
-    font-style: normal;
-  }
-
-  @font-face {
-    font-family: "Cubic Five";
-    src: url("/fonts/cubicfive12.woff2") format("woff2");
-    font-weight: 600;
-    font-style: normal;
-  }
-
-  @font-face {
-    font-family: "Cubic Five";
-    src: url("/fonts/cubicfive18.woff2") format("woff2");
-    font-weight: 700;
-    font-style: normal;
-  }
-
+  
   @font-face {
     font-family: "Pixelated MS Sans Serif";
-    src: url("fonts/ms_sans_serif.woff2") format("woff2");
+    src: url("/fonts/ms_sans_serif.woff2") format("woff2");
     font-weight: normal;
     font-style: normal;
   }
   @font-face {
     font-family: "Pixelated MS Sans Serif";
-    src: url("fonts/ms_sans_serif_bold.woff2") format("woff2");
+    src: url("/fonts/ms_sans_serif_bold.woff2") format("woff2");
     font-weight: bold;
     font-style: normal;
   }
