--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -25,7 +25,7 @@ const getOnlineCharacters = async () => {
 await getOnlineCharacters();
 ---
 
-<Layout title="Welcome to Cool Game 3">
+<Layout title="Cool Game 3">
   <main class="pb-24">
     <Nav />
 
