--- a/site/src/pages/patches.astro
+++ b/site/src/pages/patches.astro
@@ -8,7 +8,7 @@ import Nav from "../components/Nav.astro";
 const patchNotes = await getCollection("patch-notes");
 ---
 
-<Layout title="Cool Game 3 Patch Notes">
+<Layout title="Cool Game 3 - Patch Notes">
   <main class='pb-24'>
     <Nav/>
     <section class="text-white mt-8">
