--- a/site/src/pages/rankings.astro
+++ b/site/src/pages/rankings.astro
@@ -23,7 +23,7 @@ const getRankings = async () => {
 const characters = await getRankings();
 ---
 
-<Layout title="Welcome to Cool Game 3">
+<Layout title="Cool Game 3 - Rankings">
   <main class="pb-24">
     <Nav />
 
