--- a/site/src/pages/signup.astro
+++ b/site/src/pages/signup.astro
@@ -75,7 +75,7 @@ if (Astro.request.method === "POST") {
 }
 ---
 
-<Layout title="Sign up to Cool Game 3">
+<Layout title="Cool Game 3 - Signup">
   <main>
     <Nav noSignup={true}/>
 
