--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -3,6 +3,17 @@ import "../style/style.css";
 import "../style/fonts.css";
 import { Picture } from "@astrojs/image/components";
 
+const getNotice = async () => {
+  try {
+    const res = await fetch(`${import.meta.env.SERVER_URL}/notice`);
+    return await res.text();
+  } catch (err) {
+    console.log("Failed to fetch notice");
+  }
+};
+
+const notice = await getNotice();
+
 export interface Props {
   title: string;
 }
@@ -24,7 +35,7 @@ const { title } = Astro.props;
       id="notice"
       class="fixed z-50 text-[#ff2] text-[15px] pt-1 pb-2 w-full bg-[rgba(0,0,0,.5)] h-[27px] top-0 left-0 overflow-hidden"
     >
-      <p class="whitespace-nowrap">Welcome to Cool Game 3.</p>
+      <p class="whitespace-nowrap">{notice.slice(1,-1)}</p>
     </div>
     <header class="relative max-h-[400px] top-[-50px]">
       <a href="/" aria-label="Go home">
