--- a/site/src/layouts/Layout.astro
+++ b/site/src/layouts/Layout.astro
@@ -35,12 +35,13 @@ const { title } = Astro.props;
     <title>{title}</title>
   </head>
   <body>
-    <div
+    <p
       id="notice"
-      class="fixed z-50 text-[#ff2] text-[15px] pt-1 pb-2 w-full bg-[rgba(0,0,0,.5)] h-[27px] top-0 left-0 overflow-hidden"
+      style='font-family:"Pixelated Arial"'
+      class="whitespace-nowrap fixed z-50 text-[#ff2] text-[15px] pt-1 pb-2 w-full bg-[rgba(0,0,0,.5)] h-[27px] top-0 left-0 overflow-hidden"
     >
-      <p class="whitespace-nowrap">{notice.slice(1, -1)}</p>
-    </div>
+      {notice.slice(1, -1)}
+    </p>
     <header class="relative max-h-[400px] top-[-50px]">
       <a href="/" aria-label="Go home">
         <Picture
