--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -60,8 +60,12 @@ await getOnlineCharacters();
 
                   return (
                     <tr class="even:bg-[rgba(255,255,255,0.05)]">
-                      <td class="text-left px-4 py-2">{Name}</td>
-                      <td class="text-left px-4 py-2">{Level}</td>
+                      <td class="text-left px-4 py-2 text-base"
+                      style='font-family:"Pixelated Arial"'
+                    >{Name}</td>
+                    <td class="text-left px-4 py-2 font-bold text-base"
+                      style='font-family:"Pixelated Arial"'
+                    >{Level}</td>
                       <td class="text-left px-4 py-2">{JobName}</td>
                       <td class="text-left px-4 py-2">
                         {((Exp / ExpRequired) * 100).toFixed(2)}%
