Added hover effect to character tables

--- a/site/src/pages/rankings.astro
+++ b/site/src/pages/rankings.astro
@@ -74,7 +74,7 @@ const characters = await getRankings();
 
                 const createDate = CreateDate.slice(0, 10)
                 return (
-                  <tr class="even:bg-[rgba(255,255,255,0.05)]">
+                  <tr class="even:bg-[rgba(255,255,255,0.05)] hover:bg-[rgba(255,255,255,0.125)]">
                     <td class="text-right px-4 py-2">#{Rank}</td>
                     <td class="text-left px-4 py-2 text-base"
                       style='font-family:"Pixelated Arial"'
