--- a/site/src/pages/index.astro
+++ b/site/src/pages/index.astro
@@ -59,7 +59,7 @@ await getOnlineCharacters();
                   } = character;
 
                   return (
-                    <tr class="even:bg-[rgba(255,255,255,0.05)]">
+                    <tr class="even:bg-[rgba(255,255,255,0.05)] hover:bg-[rgba(255,255,255,0.125)]">
                       <td class="text-left px-4 py-2 text-base"
                       style='font-family:"Pixelated Arial"'
                     >{Name}</td>
